--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="preload" fetchpriority="high" as="image" href="/mspk_profile1.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Muhammed Sahal P K - Professional Portfolio</title>
   </head>
